# GPUkeywordPIR

./: CMakeLists.txt  README.md
_vscode/: settings.json
include/: client.hpp  pir.hpp  server.hpp  utils.hpp
include/CAHEL/: batchencoder.h  cahel.h  ciphertext.h  ckks.h  common.h  context.h  croots.h  evaluate.h  fft.h  galois.cuh  gpucontext.h  gputype.h  lock.cuh  mempool.cuh  ntt.cuh  plaintext.h  polymath.cuh  prng.cuh  rns.cuh  rns_base.cuh  rns_bconv.cuh  scalingvariant.cuh  secretkey.h  uintmath.cuh  uintmodmath.cuh  util.cuh
include/CAHEL/util/: blake2-impl.h  blake2.h  common.h  defines.h  galois.h  globals.h  hash.h  hestdparms.h  ntt.h  numth.h  polycore.h  rns.h  uintarith.h  uintarithmod.h  uintarithsmallmod.h  uintcore.h
src/: CMakeLists.txt  client.cu  main.cu  pir.cu  server.cu
