cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# set(CUDA_NVCC_FLAGS -G;-g)
add_definitions("-g -G")
project(GPUKEYWORDPIR VERSION 2.2 LANGUAGES CXX CUDA)
file(GLOB_RECURSE SOURCES )
add_library(CAHEL SHARED IMPORTED)
set_target_properties(CAHEL PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/lib/libCAHEL.so)
include_directories(include)
#add_library(keywordpir src/main.cu include/pir.hpp include/utils.hpp include/server.hpp include/client.hpp src/pir.cu src/client.cu src/server.cu)
#add_library(keywordpir pir.h utils.h server.h client.h pir.cu client.cu server.cu)
#target_link_libraries(keywordpir CAHEL)
add_library(gpukeywordpir src/pir.cu src/client.cu src/server.cu include/pir.hpp include/client.hpp include/server.hpp include/utils.hpp)
add_executable(main src/main.cu)
#target_include_directories(main PUBLIC ${PROJECT_SOURCE_DIR}/include/)
target_link_libraries(main CAHEL gpukeywordpir)
